Fix some bugs after authentication : scrollbar, socket notifcation, ...

--- a/client/less/home.less
+++ b/client/less/home.less
@@ -1,6 +1,6 @@
 @import 'constants.less';
 
-#home {
+#home-page {
   overflow-y: scroll;
   height: 100%;
 
