--- a/client/less/inputs.less
+++ b/client/less/inputs.less
@@ -2,13 +2,12 @@
 
 
 .input-container {
-  padding-top : 0;
+  padding-top : 0.8em;
   position : relative;
   transition : all 0.2s;
   margin-top: 0.5em;
 
   &.open {
-    padding-top : 0.8em;
 
     input {
       + label{
@@ -43,7 +42,7 @@
     + label {
       position : absolute;
       transition : all 0.2s;
-      top : 0.6em;
+      top : 1.7em;
       left : @padding-medium;
       color : @black-50;
       cursor : text;
